# src/main/resources/.well-known/openapi.yaml
@@ -24,11 +24,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/messageResponse"
+      x-return-raw:
+        description: 标记当前API请求的结果是否经过大模型，当name的值不空时，从插件结果中获取具体字段，类型必须string，直接返回，而不经过大模型。
+        mediaType: application/json
+        name: message
+        type: string
 
   /get_image:
     post:
       operationId: getImage
-      summary: 获取图片的URL地址和剩余其他内容
+      summary: 获取车票图片的URL地址，返回车票上的详情信息
       requestBody:
         required: true
         content:
@@ -42,6 +47,34 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/messageResponse"
+      x-return-raw:
+        description: 标记当前API请求的结果是否经过大模型，当name的值不空时，从插件结果中获取具体字段，类型必须string，直接返回，而不经过大模型。
+        mediaType: application/json
+        name: message
+        type: string
+
+  /plan_trip:
+    post:
+      operationId: planTrip
+      description: 帮助用户规划行程
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/routePlanning"
+      responses:
+        200:
+          description: 插件信息返回成功
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/messageResponse"
+      x-return-raw:
+        description: 标记当前API请求的结果是否经过大模型，当name的值不空时，从插件结果中获取具体字段，类型必须string，直接返回，而不经过大模型。
+        mediaType: application/json
+        name: message
+        type: string
 
   /get_description:
     post:
@@ -68,6 +101,7 @@ components:
         pluginUrl:
           type: string
           description: 插件的官网
+
 
     # 请求URL
     routePlanning:
